--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     color: #fff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    user-select: none;
 }
 
 body {
